ingress-certmanager.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard-ingress
  #  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    #    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: "letsencrypt-cluster-issuer"
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
        - dashboard.sandeepchowdary.in
      secretName: prod-cert-nginx-dashboard
  rules:
   - host: dashboard.sandeepchowdary.in
     http:
       paths:
         - path: /
           backend:
             serviceName: kubernetes-dashboard
             servicePort: 443
